--- a/WeatherApp/app/src/main/res/layout/fragment_weather.xml
+++ b/WeatherApp/app/src/main/res/layout/fragment_weather.xml
@@ -2,7 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.wra1th.weatherapp.WeatherFragment">
+    tools:context="com.example.wra1th.weatherapp.WeatherFragment"
+    android:paddingTop="20sp"
+    android:paddingBottom="20sp"
+    android:paddingLeft="10sp"
+    android:paddingRight="10sp">
 
     <TextView
         android:id="@+id/city_field"
