--- a/WeatherApp/app/src/main/res/menu/weather.xml
+++ b/WeatherApp/app/src/main/res/menu/weather.xml
@@ -8,6 +8,6 @@
         android:id="@+id/change_city"
         android:orderInCategory="1"
         android:title="@string/change_city"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 
 </menu>
