--- a/WeatherApp/app/src/main/res/menu/weather.xml
+++ b/WeatherApp/app/src/main/res/menu/weather.xml
@@ -10,4 +10,16 @@
         android:title="@string/change_city"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/settings"
+        android:orderInCategory="2"
+        android:title="@string/settings"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/about"
+        android:orderInCategory="3"
+        android:title="@string/about"
+        app:showAsAction="never" />
+
 </menu>
