--- a/WeatherApp/app/src/main/res/menu/weather.xml
+++ b/WeatherApp/app/src/main/res/menu/weather.xml
@@ -5,6 +5,12 @@
     tools:context="com.example.wra1th.weatherapp.MainActivity">
 
     <item
+        android:id="@+id/refresh"
+        android:orderInCategory="1"
+        android:title="@string/refresh"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/change_city"
         android:orderInCategory="1"
         android:title="@string/change_city"
