--- a/WeatherApp/app/src/main/res/menu/weather.xml
+++ b/WeatherApp/app/src/main/res/menu/weather.xml
@@ -12,20 +12,26 @@
 
     <item
         android:id="@+id/change_city"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="@string/change_city"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/settings"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/settings"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/about"
-        android:orderInCategory="3"
+        android:orderInCategory="4"
         android:title="@string/about"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/location"
+        android:orderInCategory="5"
+        android:title="Location"
         app:showAsAction="never" />
 
 </menu>
