--- a/WeatherApp/app/src/main/res/menu/weather.xml
+++ b/WeatherApp/app/src/main/res/menu/weather.xml
@@ -8,13 +8,15 @@
         android:id="@+id/refresh"
         android:orderInCategory="1"
         android:title="@string/refresh"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_refresh" />
 
     <item
         android:id="@+id/change_city"
         android:orderInCategory="2"
         android:title="@string/change_city"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_gps"/>
 
     <item
         android:id="@+id/settings"
