--- a/WeatherApp/app/src/main/res/layout/activity_location.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_location.xml
@@ -14,39 +14,33 @@
         android:fontFamily="sans-serif"
         android:text="@string/choose_city"
         android:textStyle="bold"
-        android:paddingBottom="10dp"
+        android:paddingBottom="20dp"
         android:paddingTop="10dp"/>
 
     <Spinner
         android:layout_width="150dp"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/search_box"
-        android:text="@string/search_box"
-        android:fontFamily="sans-serif"
-        android:textStyle="bold"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"/>
+        android:paddingBottom="40dp"
+        android:id="@+id/city_spinner"
+        android:animateLayoutChanges="true" />
 
-    <EditText
+
+    <Button
+        android:id="@+id/city_button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:text="@string/search_box" />
 
     <TextView
-        android:paddingTop="10dp"
+        android:id="@+id/recent_places"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recent_places"
-        android:text="@string/recent_places"
         android:fontFamily="sans-serif"
-        android:textStyle="bold"
-        android:paddingBottom="10dp"/>
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="@string/recent_places"
+        android:textStyle="bold" />
 
     <ListView
         android:layout_width="match_parent"
