--- a/WeatherApp/app/src/main/res/values/arrays.xml
+++ b/WeatherApp/app/src/main/res/values/arrays.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="listArray">
-        <item>°F</item>
-        <item>°C</item>
-    </string-array>
-    
-    <string-array name="listValues">
-        <item>1</item>
-        <item>2</item>
+        <item>Dallas</item>
+        <item>Richardson</item>
+        <item>New York</item>
+        <item>San Diego</item>
+        <item>Austin</item>
+        <item></item>
     </string-array>
 
 </resources>
