--- a/WeatherApp/app/src/main/res/layout/activity_location.xml
+++ b/WeatherApp/app/src/main/res/layout/activity_location.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.wra1th.weatherapp.LocationActivity"
-    android:orientation="vertical"
-    android:background="#f0cb8c">
+    android:orientation="vertical">
     <TextView
         android:id="@+id/choose_city"
         android:layout_width="wrap_content"
@@ -24,7 +23,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:layout_marginStart="15dp">
 
         <RelativeLayout
             android:layout_width="250sp"
