--- a/NewsArticle/app/src/main/res/layout/activity_main.xml
+++ b/NewsArticle/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,27 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <ProgressBar
+                android:visibility="gone"
+                android:id="@+id/prog_bar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"/>
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/retry_button"
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Retry"/>
 
             <TextView
                 android:id="@+id/tv_article"
